# rerun-sofun

./: .gitignore  .zipignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEV_GUIDE.md  IMPROVEMENTS.md  LICENSE  PROJECT.md  README.md  RUST_PATTERNS.md  WINDOWS_BUILD_GUIDE.md  build-release.ps1  build.sh  fix_type_issues.py  fix_view_builder.py  run.bat  run.sh  test_all_plots.py  test_plots.py
.cargo/: config.toml
crates/dv-app/: Cargo.toml  build.rs
crates/dv-app/src/: create_sample_db.rs  demo.rs  demo_overlay.rs  file_config_dialog.rs  frog_animation.rs  main.rs  view_builder.rs
crates/dv-core/: Cargo.toml
crates/dv-core/src/: lib.rs  notes.rs  state.rs
crates/dv-core/src/events/: mod.rs
crates/dv-core/src/navigation/: engine.rs  mod.rs  position.rs  subscriber.rs
crates/dv-core/src/notes/: README.md
crates/dv-core/src/state/: mod.rs
crates/dv-core/src/sync/: mod.rs
crates/dv-data/: Cargo.toml
crates/dv-data/src/: lib.rs
crates/dv-data/src/cache/: mod.rs
crates/dv-data/src/config/: file_config.rs  mod.rs  null_handling.rs
crates/dv-data/src/index/: mod.rs
crates/dv-data/src/memory/: mod.rs
crates/dv-data/src/schema/: mod.rs
crates/dv-data/src/sources/: combined_csv_source.rs  configured_combined_csv_source.rs  configured_csv_source.rs  csv_source.rs  mod.rs  sqlite_source.rs
crates/dv-render/: Cargo.toml
crates/dv-render/src/: lib.rs
crates/dv-templates/: Cargo.toml
crates/dv-templates/src/: lib.rs
crates/dv-ui/: Cargo.toml
crates/dv-ui/src/: lib.rs  navigation_panel.rs  notes_ui.rs  widget_utils.rs
crates/dv-ui/src/panels/: mod.rs
crates/dv-ui/src/shell/: mod.rs
crates/dv-ui/src/theme/: mod.rs
crates/dv-views/: Cargo.toml
crates/dv-views/src/: export.rs  lib.rs  polar_view.rs  space_view.rs  time_series_view.rs  viewport.rs
crates/dv-views/src/plots/: README.md  anomaly.rs  bar.rs  box_plot.rs  candlestick.rs  contour.rs  correlation.rs  distribution.rs  geo.rs  heatmap.rs  histogram.rs  line.rs  mod.rs  network.rs  parallel_coordinates.rs  polar.rs  radar.rs  sankey.rs  scatter.rs  scatter3d.rs  scatter_plot_view.rs  stream.rs  sunburst.rs  surface3d.rs  time_analysis.rs  treemap.rs  utils.rs  violin.rs
crates/dv-views/src/plots/utils/: colors.rs  stats.rs
crates/dv-views/src/stats/: mod.rs
crates/dv-views/src/tables/: mod.rs
data/: MOCK_DATA_0.csv  MOCK_DATA_1.csv  MOCK_DATA_2.csv  assembly_line.csv  bar_chart_test.csv  basic_config.json  box_plot_test.csv  contour_test.csv  correlation_test.csv  create_sample_db.sql  distribution_test.csv  financial_test.csv  geographic_test.csv  header_test.csv  heatmap_test.csv  hierarchical_test.csv  histogram_test.csv  multi_config.json  network_test.csv  network_traffic.csv  parallel_coordinates_test.csv  performance_test.csv  polar_test.csv  polar_test_data.csv  radar_test.csv  sales_data.csv  scatter3d_test.csv  scatter_test.csv  sensor_readings.csv  stock_prices.csv  test_database.db  test_header_issue.csv  time_series_test.csv  type_detection_test.csv
docs/: CURRENT_STATUS.md  DEBUGGING_GUIDE.md  DESIGN_PRINCIPLES.md  MODULE_GUIDE.md  PLOT_CATEGORICAL_SUPPORT.md  PLOT_TYPES_GUIDE.md  ROADMAP.md  SQLITE_BUILD_FIX.md  VISUALIZATION_ARCHITECTURE.md  WIDGET_ID_BEST_PRACTICES.md  rerun-integration-plan.md
scripts/: build-release.bat  build-release.ps1  generate_test_data.py
