[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Data Visualization Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Data handling
arrow = { version = "53.0", default-features = false, features = ["prettyprint", "csv"] }
csv = "1.3"
rusqlite = { version = "0.30", features = ["bundled-full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI dependencies
egui = "0.24"
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui_plot = "0.24"
egui_dock = "0.9"
egui_extras = "0.24"
wgpu = "0.19"

# Utility
parking_lot = "0.12"
ahash = "0.8"
indexmap = "2.1"
chrono = "0.4"
bytemuck = "1.14"
glam = "0.24"
num-traits = "0.2"
humantime = "2.1"
once_cell = "1.19"
rayon = "1.8"
rfd = "0.12"
env_logger = "0.10"
log = "0.4"

# Local crates
dv-core = { path = "crates/dv-core" }
dv-data = { path = "crates/dv-data" }
dv-render = { path = "crates/dv-render" }
dv-views = { path = "crates/dv-views" }
dv-templates = { path = "crates/dv-templates" }
dv-ui = { path = "crates/dv-ui" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = false
codegen-units = 16
strip = false  # Don't strip symbols on Windows
