[package]
name = "dv-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
egui = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies] 