[package]
name = "dv-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dv-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
egui.workspace = true

[dev-dependencies] 