[package]
name = "dv-templates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dv-core.workspace = true
dv-views.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
egui_dock.workspace = true
arrow.workspace = true
serde_json.workspace = true

[dev-dependencies] 