[package]
name = "dv-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dv-core.workspace = true
dv-views.workspace = true
egui.workspace = true
egui_dock = "0.9"
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies] 