[package]
name = "dv-views"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dv-core.workspace = true
dv-render.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
egui.workspace = true
egui_plot = "0.24"
egui_extras = "0.24"
egui_dock = "0.9"
arrow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies] 