[package]
name = "dv-views"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dv-core = { path = "../dv-core" }
dv-data = { path = "../dv-data" }
dv-render.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot = { workspace = true }
egui = { workspace = true }
egui_plot = { workspace = true }
egui_extras = "0.24"
egui_dock = "0.9"
arrow = { workspace = true }
async-trait.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { workspace = true }
glam = { workspace = true }

# New dependencies for advanced plotting
rand = "0.8"
nalgebra = "0.32"
plotters = "0.3"
plotters-backend = "0.3"
statrs = "0.16"
colorgrad = "0.6"
ndarray = "0.15"

# For plot export
image = { version = "0.24", features = ["png"] }
rfd = "0.13"

# 3D rendering support
wgpu = "0.19"
bytemuck = "1.14"
cgmath = "0.18"
three-d = { version = "0.16", default-features = false, features = ["egui-gui"] }

# Geographic visualization
geo = "0.28"
geo-types = "0.7"
geojson = "0.24"
rstar = "0.12"

# Graph/Network visualization
petgraph = "0.6"
layout-rs = "0.1"
fdg-sim = "0.9"

# Additional utilities
itertools = "0.12"
rayon = "1.8"
ordered-float = "4.2"
num-traits = "0.2"

[dev-dependencies] 